# pocs

./: CICD_AND_DEPLOYMENT.md  README.md
cce-feature-platform/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
cce-feature-platform/data/bronze/: campaign_rules.jsonl  cas_customers.jsonl  policies.jsonl  transactions.jsonl
cce-feature-platform/data/gold/: customer_features.csv  policy_features.csv
cce-feature-platform/data/silver/: identity_crosswalk.csv
cce-feature-platform/data/test_runtime/: cdc_events_test.jsonl  feature_store_test.json
cce-feature-platform/data/warehouse/: cce_platform.sqlite
cce-feature-platform/deploy/: README.md
cce-feature-platform/deploy/airflow/: cce_feature_pipeline_dag.py
cce-feature-platform/deploy/databricks/: cce_medallion_job.py
cce-feature-platform/deploy/emr_delta/: 0_generate_synthetic_data.py  1_bronze_ingest.py  2_silver_feature_eng.py  (+5 more)
cce-feature-platform/docs/: AI_VECTOR_DB_EXTENSION.md  ARCHITECTURE_MLOPS_GRAPHML_DEPLOYMENT.md  BIG_DATA_EMR_DELTA_EXTENSION.md  OPERATIONS_MATURITY_AND_COST.md  REALTIME_FEATURE_PLATFORM_480K.md
cce-feature-platform/frontend/: app.js  index.html  style.css
cce-feature-platform/tests/: test_pipeline.py
data-governance-poc/: .gitignore  Makefile  README.md  pyproject.toml
data-governance-poc/contracts/: oms_event_contract.json
data-governance-poc/tests/: test_monitor.py
oee-data-platform/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
oee-data-platform/deploy/: README.md
oee-data-platform/frontend/: app.js  index.html  style.css
oee-data-platform/tests/: test_pipeline.py
oms-oltp-poc/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
oms-oltp-poc/docs/: OLTP_OLAP_HTAP_MAPPING.md
oms-oltp-poc/frontend/: app.js  index.html  style.css
oms-oltp-poc/tests/: conftest.py  test_oms_flow.py
(+78 files in other folders)
