[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "data-governance-poc"
version = "0.1.0"
description = "Executable data contract and observability checks for OLTP to OLAP handoff"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["pytest==8.3.4"]

[tool.setuptools.packages.find]
where = ["src"]