[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "oee-data-platform"
version = "0.1.0"
description = "Industrial OEE data platform PoC"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
]

[project.optional-dependencies]
test = ["pytest==8.3.4"]

[tool.setuptools.packages.find]
where = ["src"]
