[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "oms-oltp-poc"
version = "0.1.0"
description = "Order management OLTP proof of concept with inventory reservation, saga compensation and outbox events"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
]

[project.optional-dependencies]
test = ["pytest==8.3.4"]

[tool.setuptools.packages.find]
where = ["src"]
